--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 				<p>I'm best known as an organizer of data and people. <em>I live for planning</em> and execution. <a href="/about">Read more about me if you must...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		
+		<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="seanhenriques"><a class="LI-simple-link" href='https://www.linkedin.com/in/seanhenriques?trk=profile-badge'>Sean Henriques PMP</a></div>
+		
 		<footer>
     		<ul>
         		<li><a href="mailto:sean.henriques@gmail.com">email</a></li>
